<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/movie_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MovieFormActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp">

            <TextView
                android:id="@+id/promp_input_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/prompt_enter_movie_title"
                android:textColor="#ff0f0f"
                android:textSize="18sp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/input_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/movie_title_required"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/promp_input_title" />

            <TextView
                android:id="@+id/promp_input_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="16dp"
                android:text="@string/prompt_enter_release_date"
                android:textColor="#ff0f0f"
                android:textSize="18sp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_title" />

            <EditText
                android:id="@+id/input_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/release_date_required"
                android:inputType="number"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/promp_input_date" />

            <TextView
                android:id="@+id/promp_input_age_rated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="16dp"
                android:text="@string/prompt_choose_age_rated"
                android:textColor="#ff0f0f"
                android:textSize="18sp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_release_date" />

            <Spinner
                android:id="@+id/spinner_age_rated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:dropDownSelector="@color/purple_500"
                android:entries="@array/age_rate"
                android:spinnerMode="dropdown"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/promp_input_age_rated" />


            <TextView
                android:id="@+id/promp_input_genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="16dp"
                android:text="@string/prompt_choose_genre_s"
                android:textColor="#ff0f0f"
                android:textSize="18sp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner_age_rated" />


            <TextView
                android:id="@+id/input_genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="10dp"
                android:drawablePadding="16dp"
                android:hint="@string/genre_s_required"
                android:textColorHint="@color/black"
                android:textSize="15sp"
                app:drawableEndCompat="@drawable/ic_arrow_drop_down"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/promp_input_genre" />

            <TextView
                android:id="@+id/promp_input_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="16dp"
                android:text="@string/prompt_enter_score"
                android:textColor="#ff0f0f"
                android:textSize="18sp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_genre" />

            <EditText
                android:id="@+id/input_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/score_required"
                android:inputType="number"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/promp_input_score" />

            <TextView
                android:id="@+id/promp_input_img_url"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="16dp"
                android:text="@string/prompt_enter_image_url"
                android:textColor="#ff0f0f"
                android:textSize="18sp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_score" />

            <EditText
                android:id="@+id/input_img_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/image_url"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/promp_input_img_url" />

            <TextView
                android:id="@+id/promp_input_plot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="16dp"
                android:text="@string/prompt_write_movie_plot"
                android:textColor="#ff0f0f"
                android:textSize="18sp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_img_url" />

            <EditText
                android:id="@+id/input_plot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/movie_plot_required"
                android:maxLines="6"
                android:scrollbars="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/promp_input_plot" />

            <Button
                android:id="@+id/back_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="Back"
                app:backgroundTint="@color/danger"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_plot" />

            <!-- <Button
             android:id="@+id/clear_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="8dp"
             android:layout_marginTop="16dp"
             android:text="Clear"
             android:backgroundTint="@color/warning"
             app:layout_constraintEnd_toStartOf="@id/submit_btn"
             app:layout_constraintStart_toEndOf="@+id/back_btn"
             app:layout_constraintTop_toBottomOf="@+id/input_plot" /> -->


            <Button
                android:id="@+id/submit_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/success"
                android:text="Submit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_plot" />


            <View
                android:id="@+id/rv_divider"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/submit_btn" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
 </RelativeLayout>